--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,12 +7,31 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+#first div.professional {
+	text-align: center;
+}
+
+#second .content {
+	text-align: center;
+}
+
+div.majors {
+  margin-left: 3%;
+  margin-right: 3%;
+}
+
+div.row {
+	background: lightgray;
+	border-radius: 25px;
+  display: table-cell;
+}
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+u, i, center, dl, dt, dd, li, fieldset,
 form, label, legend, table, caption, tbody,
 tfoot, thead, tr, th, td, article, aside,
 canvas, details, embed, figure, figcaption,
@@ -31,10 +50,6 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
-}
-
-ol, ul {
-	list-style: none;
 }
 
 blockquote, q {
@@ -71,6 +86,7 @@ input, select, textarea {
 	-ms-appearance: none;
 	appearance: none;
 }
+
 
 /* Basic */
 
@@ -2425,31 +2441,6 @@ input, select, textarea {
 		ol li {
 			padding-left: 0.25em;
 		}
-
-	ul {
-		list-style: disc;
-		margin: 0 0 2em 0;
-		padding-left: 1em;
-	}
-
-		ul li {
-			padding-left: 0.5em;
-		}
-
-		ul.alt {
-			list-style: none;
-			padding-left: 0;
-		}
-
-			ul.alt li {
-				border-top: solid 1px;
-				padding: 0.5em 0;
-			}
-
-				ul.alt li:first-child {
-					border-top: 0;
-					padding-top: 0;
-				}
 
 	dl {
 		margin: 0 0 2em 0;
