--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,13 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+#header {
+	color: black;
+}
+
+#header h1{
+	color: black;
+}
 
 #first div.professional {
 	text-align: center;
@@ -114,10 +121,10 @@ input, select, textarea {
 
 	body {
 		background-color: #a40606;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, black 15%, #a40606 85%);
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, black 15%, #a40606 85%);
-		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, black 15%, #a40606 85%);
-		background-image: url("images/overlay.png"), linear-gradient(45deg, black 15%, #a40606 85%);
+		background-image: url("images/overlay.png"), -moz-linear-gradient(45deg, grey 15%, white 85%);
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(45deg, grey 15%, white 85%);
+		background-image: url("images/overlay.png"), -ms-linear-gradient(45deg, grey 15%, white 85%);
+		background-image: url("images/overlay.png"), linear-gradient(45deg, grey 15%, white 85%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -3110,7 +3117,7 @@ input, select, textarea {
 				#header.alt .logo img {
 					display: block;
 					margin: 0 auto;
-					max-width: 75%;
+					max-width: 35%;
 				}
 
 		@media screen and (max-width: 1280px) {
